Almost fix drag and drop with cropper

--- a/info_u_frontend/src/styles.css
+++ b/info_u_frontend/src/styles.css
@@ -156,6 +156,10 @@ body {
     opacity: 0.8;
 }
 
+.uploadfilecontent {
+    height: 100%;
+}
+
 .files-list {
     display: flex;
     justify-content: space-between;
